src/test/ui/issues/issue-47094.stderr
error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:1:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^

error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:7:8
   |
LL | #[repr(C)]
   |        ^
LL | #[repr(u8)]
   |        ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0566`.
